GL/Projet_GL/src/test/deca/codegen/interactif/invalid/readInt_called_with_parameter.deca
// Description:
//    Appel de readInt avec un paramètre
//
// Resultats:
//    Erreur contextuelle : readInt ne prend aucun paramètre (appel avec 1 argument alors que la fonction n'en attend aucun).

{
    int x = readInt(1);
}